feat: 774 support & mappings dumper