@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.by1337.fparticle</groupId>
         <artifactId>FastParticle-parent</artifactId>
-        <version>1.3</version>
+        <version>1.5</version>
     </parent>
     <artifactId>fparticle</artifactId>
     <name>fparticle</name>
@@ -24,6 +24,9 @@
                 <configuration>
                     <source>16</source>
                     <target>16</target>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -56,6 +59,11 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>../mappings</directory>
+                <targetPath>mappings</targetPath>
                 <filtering>false</filtering>
             </resource>
         </resources>
@@ -121,6 +129,19 @@
             <artifactId>netty-codec</artifactId>
             <version>4.1.115.Final</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.37</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.37</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
